--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,8 +1,8 @@
 apiVersion: "1"
 version: "1"
-id: "REPLACE_GITHUB_ORG-REPLACE_CONTROLLER_NAME"
-description: "CloudBees CI configuration bundle for the REPLACE_GITHUB_ORG REPLACE_CONTROLLER_NAME Controller"
-availabilityPattern: "REPLACE_AVAILABILITY_PATTERN"
+id: "ea-casc-ops-controller"
+description: "CloudBees CI configuration bundle for the ea-casc ops-controller Controller"
+availabilityPattern: "cloudbees-ci-casc-workshop/ea-casc/ops-controller"
 jcasc:
   - "jenkins.yaml"
 plugins:
