--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,10 +1,10 @@
 apiVersion: "1"
-version: "2"
+version: "3"
 id: "ea-casc-ops-controller"
 description: "CloudBees CI configuration bundle for the ea-casc ops-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/ea-casc/ops-controller"
 jcasc:
-  - "jenkins.yaml"
+  - "jcasc/"
 plugins:
   - "plugins.yaml"
 items:
